# data-work

./: .gitignore  README.md  orders.parquet.ipynb  orders_clean.parquet.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: analytics_table.parquet-checkpoint.ipynb
data/processed/: _run_meta.json  orders.parquet
data/raw/: orders.csv  users.csv
notebooks/: analytics_table.ipynb  eda.ipynb  orders.ipynb  orders.parquet.ipynb  orders_clean.parquet.ipynb
reports/: revenue_by_country.csv
reports/.ipynb_checkpoints/: missingness_orders-checkpoint.csv
scripts/: generate_data.py  process_data.py  run_analysis.py  run_build_analytcs.py  run_clean.py  run_etl.py  run_load.py
src/bootcamp_data/: config.py  etl.py  joins.py  transforms.py
src/data_bootcamp/: io.py  transforms.py
