[project]
name = "data-work"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "streamlit",
    "pandas",
    "pyarrow",
    "pandera>=0.27.1",
    "plotly>=6.5.0",
    "kaleido>=1.2.0",
    "fastparquet>=2025.12.0",
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "ipywidgets>=8.1.8",
    "jupyterlab",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bootcamp_data"]
